# ecommerceERP

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py
.data/: api_runs.db
.github/: copilot-instructions.md
.github/instructions/: security.instructions.md
.github/workflows/: docker-slice-c.yml  publish-aws-image.yml
db/: README.md
db/bootstrap/: 001_phase3_persistence.sql  002_transfer_ownership_to_erp_app.sql
docs/: aws-dev-operations-runbook.md  phase5-slice5.1-checklist.md  phase5-slice5.4-checklist.md  phase5-slice5.5-checklist.md
infra/terraform/environments/dev/: backend.tf  main.tf  outputs.tf  tfplan  variables.tf
infra/terraform/modules/app-runtime/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/ecr/: main.tf  outputs.tf
infra/terraform/modules/ecs-cluster/: main.tf  (+2 more)
infra/terraform/scripts/: cleanup.sh  deploy-stack-53.sh  destroy-stack-52.sh  teardown.sh
scripts/: connect-cloud-db  connect-local-db  push-ecr-image  smoke-api  smoke-cloud-api
src/ecommerce_erp/: main.py
src/ecommerce_erp/agent/: guardrails.py  orchestrator.py  state.py
src/ecommerce_erp/api/: app.py  auth.py  models.py  persistence.py  store.py
src/ecommerce_erp/recommendation/: engine.py
src/ecommerce_erp/tools/: inventory.py  market.py
src/ecommerce_erp/ui/: app.py
src/ecommerce_erp/utils/: sanitization.py  trace_logger.py
tests/: conftest.py  test_api.py  test_guardrails.py  test_orchestrator.py  test_recommendation_engine.py  test_smoke.py  test_tools.py
(+15 files in other folders)
