[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ecommerceERP"
version = "0.1.0"
description = "Minimal Python application scaffold"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
ecommerce-erp = "ecommerce_erp.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
